--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
